<resources>
    <string name="app_name">Simarropop</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user">User</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="location">Location</string>
    <string name="articles">Articles</string>
    <string name="myarticles">My articles</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="login_prompt">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>

</resources>